add jekyllthemes webjeda style

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
-layout: blog
+layout: default
 ---
 
 <h2>rubenpieters' Programming Blog</h2>
 <p>Welcome blog wanderer, see what posts we have in store:</p>
+<p>(Style provided by <a href=http://jekyllthemes.org/themes/hagura/>jekyllthemes.org</a> )</p>
 
 <ul>
   {% for post in site.posts %}
