--- a/academic.html
+++ b/academic.html
@@ -5,7 +5,8 @@ layout: default
 <ul>
   <li>
     <p>March 2018 | Handlers for Non-Monadic Computations</p>
-	<p><small>IFL'17 | <a href="http://www.cs.kuleuven.be/publicaties/rapporten/cw/CW713.pdf">extended version</a></small></p>
+    <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers, Exequiel Rivas</small></p>
+	<p style="margin-top: -20px"><small>IFL'17 | <a href="http://www.cs.kuleuven.be/publicaties/rapporten/cw/CW713.pdf">extended version</a></small></p>
   </li>
 </ul>
 
@@ -13,6 +14,6 @@ layout: default
 <ul>
   <li>
     <p>Sept 2017 | Handlers for Non-Monadic Computations</p>
-	<p><small><a href="http://2017.iflconference.org/">IFL'17</a></small></p>
+	<p style="margin-top: -20px"><small><a href="http://2017.iflconference.org/">IFL'17</a></small></p>
   </li>
 </ul>
