--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+<h2>WIP</h2>
+
+<div>This page will be reworked soon<sup>TM</sup>.</div>
+
 <h2>Open Source</h2>
 
 <h3>Libraries</h3>
