--- a/academic.html
+++ b/academic.html
@@ -4,16 +4,25 @@ layout: default
 <h2>Publications</h2>
 <ul>
   <li>
-    <p>March 2018 | Handlers for Non-Monadic Computations</p>
+    <p>2019 | Faster Coroutine Pipelines: A Reconstruction</p>
+    <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers</small></p>
+	  <p style="margin-top: -20px"><small><a href="https://popl19.sigplan.org/track/PADL-2019">PADL'19</a> | <a href="https://link.springer.com/chapter/10.1007/978-3-030-05998-9_9">springer</a> | <a href="http://www.cs.kuleuven.be/publicaties/rapporten/cw/CW715.pdf">extended version</a></small></p>
+  </li>
+  <li>
+    <p>2017 | Handlers for Non-Monadic Computations</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers, Exequiel Rivas</small></p>
-	<p style="margin-top: -20px"><small>IFL'17 | <a href="http://www.cs.kuleuven.be/publicaties/rapporten/cw/CW713.pdf">extended version</a></small></p>
+	  <p style="margin-top: -20px"><small><a href="http://2017.iflconference.org/">IFL'17</a> | <a href="https://dl.acm.org/citation.cfm?doid=3205368.3205372">acm</a> | <a href="http://www.cs.kuleuven.be/publicaties/rapporten/cw/CW713.pdf">extended version</a></small></p>
   </li>
 </ul>
 
 <h2>Presentations</h2>
 <ul>
   <li>
-    <p>Sept 2017 | Handlers for Non-Monadic Computations</p>
-	<p style="margin-top: -20px"><small><a href="http://2017.iflconference.org/">IFL'17</a></small></p>
+    <p>2019 | Faster Coroutine Pipelines: A Reconstruction</p>
+	  <p style="margin-top: -20px"><small><a href="https://popl19.sigplan.org/track/PADL-2019">PADL'19</a> | <a href="{{ site.url }}/assets/padl19.pdf">slides</a></small></p>
+  </li>
+  <li>
+    <p>2017 | Handlers for Non-Monadic Computations</p>
+	  <p style="margin-top: -20px"><small><a href="http://2017.iflconference.org/">IFL'17</a> | <a href="{{ site.url }}/assets/ifl17.pdf">slides</a></small></p>
   </li>
 </ul>
