change slide links to how they should be

--- a/academic.html
+++ b/academic.html
@@ -19,10 +19,10 @@ layout: default
 <ul>
   <li>
     <p>2019 | Faster Coroutine Pipelines: A Reconstruction</p>
-	  <p style="margin-top: -20px"><small><a href="https://popl19.sigplan.org/track/PADL-2019">PADL'19</a> | <a href="{{ site.url }}/assets/padl19.pdf">slides</a></small></p>
+	  <p style="margin-top: -20px"><small><a href="https://popl19.sigplan.org/track/PADL-2019">PADL'19</a> | <a href="{{ '/assets/padl19.pdf' | relative_url }}">slides</a></small></p>
   </li>
   <li>
     <p>2017 | Handlers for Non-Monadic Computations</p>
-	  <p style="margin-top: -20px"><small><a href="http://2017.iflconference.org/">IFL'17</a> | <a href="{{ site.url }}/assets/ifl17.pdf">slides</a></small></p>
+	  <p style="margin-top: -20px"><small><a href="http://2017.iflconference.org/">IFL'17</a> | <a href="{{ '/assets/ifl17.pdf' | relative_url }}">slides</a></small></p>
   </li>
 </ul>
