update aacademic/resume tabs

--- a/academic.html
+++ b/academic.html
@@ -18,11 +18,33 @@ layout: default
 <h2>Presentations</h2>
 <ul>
   <li>
+    <p>2019 | Animation DSL With Effect Handlers</p>
+	  <p style="margin-top: -20px"><small><a href="https://www.meetup.com/dddbelgium/events/262865559">Functional Kortrijk Meetup</a></small></p>
+  </li>
+  <li>
+    <p>2019 | (Non-)Monadic Effect Handlers</p>
+	  <p style="margin-top: -20px"><small><a href="https://dtai.cs.kuleuven.be/seminars/non-monadic-effect-handlers-ruben-pieters">DTAI Seminar</a> | <a href="{{ '/assets/dtai19.pdf' | relative_url }}">slides</a></small></p>
+  </li>
+  <li>
     <p>2019 | Faster Coroutine Pipelines: A Reconstruction</p>
 	  <p style="margin-top: -20px"><small><a href="https://popl19.sigplan.org/track/PADL-2019">PADL'19</a> | <a href="{{ '/assets/padl19.pdf' | relative_url }}">slides</a></small></p>
   </li>
   <li>
     <p>2017 | Handlers for Non-Monadic Computations</p>
 	  <p style="margin-top: -20px"><small><a href="http://2017.iflconference.org/">IFL'17</a> | <a href="{{ '/assets/ifl17.pdf' | relative_url }}">slides</a></small></p>
+  </li>
+</ul>
+
+
+<h2>Teaching Experience</h2>
+<ul>
+  <li>
+    2018-2019 | Guiding master thesis students.
+  </li>
+  <li>
+    2018-2019 | Teaching Assistant for <a href=https://onderwijsaanbod.kuleuven.be/syllabi/n/G0P79AN.htm#activetab=doelstellingen_idp26991696>"Fundamenten voor de informatica"</a> <i>(Fundamentals for Computer Science)</i>.
+  </li>
+  <li>
+    2017-2019 | Teaching Assistant for <a href=https://onderwijsaanbod.kuleuven.be/syllabi/n/H01B6BN.htm#activetab=doelstellingen_idp2930032>"Methodiek van de Informatica"</a> <i>(Methodology of Computer Science)</i>.
   </li>
 </ul>
