--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@ layout: default
   <li>
     <p>
 	  <button class="collapsible"><b>PhD Student</b></button>
-	  <div class="content"><p>PhD in expressiveness of modelling techniques for side effects in functional programming.</p></div>
+	  <div class="content"><p>Investigating the expressiveness of techniques for side effects in functional programming. See <a href="/academic">academic</a> tab for more info.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>KU Leuven, Belgium</i></p>
 	<p style="margin-top: -20px"><small>February 2017 - Present</small></p>
@@ -15,7 +15,7 @@ layout: default
   <li>
     <p>
 	  <button class="collapsible"><b>Software Developer</b></button>
-	  <div class="content"><p>Extending/maintaining software for controlling lab measurement equipment and post-processing of measurement data.</p></div>
+	  <div class="content"><p>Extending/maintaining software for controlling a variety of lab measurement equipment for testing integrated circuits. Development of utilities for measurement data post-processing.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>Imec, Belgium</i></p>
 	<p style="margin-top: -20px"><small>As Freelance Developer: June 2018 - Present • 10 %</small></p>
@@ -24,18 +24,51 @@ layout: default
   <li>
     <p>
 	  <button class="collapsible"><b>Software Consultant</b></button>
-	  <div class="content"><p>Development of big data log collection and analysis system using Scala, Spark and Hadoop.</p></div>
+	  <div class="content"><p>Development of a telemetry platform for enhancing the user experience of digital TV customers at Proximus, the largest Belgian telecommunication company. This platform was developed using big data technologies including Scala, Spark and Hadoop.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>Devoteam, Belgium</i></p>
 	<p style="margin-top: -20px"><small>September 2015 - February 2017</small></p>
   </li>
 </ul>
 
+<h2>Open Source</h2>
+Some selected open source contributions:
+<ul>
+  <li>
+    <a href=https://github.com/rubenpieters/animation-dsl-examples>Animation DSL Examples (Haskell)</a>
+    <p style="margin-top: -10px"><i>Showcase of a minimalistic DSL used for creating (micro-)animations.</i></p>
+  </li>
+  <li>
+    <a href=https://github.com/rubenpieters/MonCat>MonCat (Haskell)</a>
+    <p style="margin-top: -10px"><i>Experimenting with Monoidal Categories in Haskell.</i></p>
+  </li>
+  <li>
+    <a href=https://github.com/rubenpieters/Orthogonal-Pipes>Orthogonal Pipes (Haskell)</a>
+    <p style="margin-top: -10px"><i>Alternative representation of Haskell pipes, based on Spivey's Faster Coroutine Pipelines. Accompanied by an <a href=https://github.com/rubenpieters/orth-pipes-bench>extensive benchmarking repo</a>.</i></p>
+  </li>
+  <li>
+    <a href=https://github.com/rubenpieters/derive-het>Derive Heterogeneous Comparisons (Haskell)</a>
+    <p style="margin-top: -10px"><i>Automatically derive heterogeneous comparisons for GADTs using TemplateHaskell.</i></p>
+  </li>
+  <li>
+    <a href=https://github.com/rubenpieters/purescript-subrecord>purescript-subrecord (PureScript)</a>
+    <p style="margin-top: -10px"><i>Support for SubRecords in PureScript.</i></p>
+  </li>
+  <li>
+    <a href=https://github.com/rubenpieters/free_showcase>Free Showcase (Scala)</a>
+    <p style="margin-top: -10px"><i>Showcase of various free monad/effect handler libraries in scala.</i></p>
+  </li>
+</ul>
+
+
+
+
 <h2>Education</h2>
 <ul>
   <li>
     <p><b>Computer Science Degree</b></p>
 	<p style="margin-top: -20px"><i>KU Leuven, Belgium</i></p>
+	<p style="margin-top: -20px"><small>2017 - Present • PhD Computer Science</small></p>
 	<p style="margin-top: -20px"><small>2013 - 2015 • Master Computer Science</small></p>
 	<p style="margin-top: -20px"><small>2010 - 2013 • Bachelor Engineering Science</small></p>
   </li>
