--- a/academic.html
+++ b/academic.html
@@ -45,6 +45,6 @@ layout: default
     2018-2019 | Teaching Assistant for <a href=https://onderwijsaanbod.kuleuven.be/syllabi/n/G0P79AN.htm#activetab=doelstellingen_idp26991696>"Fundamenten voor de informatica"</a> <i>(Fundamentals for Computer Science)</i>.
   </li>
   <li>
-    2017-2019 | Teaching Assistant for <a href=https://onderwijsaanbod.kuleuven.be/syllabi/n/H01B6BN.htm#activetab=doelstellingen_idp2930032>"Methodiek van de Informatica"</a> <i>(Methodology of Computer Science)</i>.
+    2017-2019 | Teaching Assistant for <a href=https://onderwijsaanbod.kuleuven.be/syllabi/n/H01B6BN.htm#activetab=doelstellingen_idp2930032>"Methodiek van de informatica"</a> <i>(Methodology of Computer Science)</i>.
   </li>
 </ul>
