add ghent fp meetup, update copyright date

--- a/academic.html
+++ b/academic.html
@@ -18,6 +18,10 @@ layout: default
 <h2>Presentations</h2>
 <ul>
   <li>
+    <p>2020 | PaSe: An Extensible and Inspectable DSL for Micro-Animations</p>
+	  <p style="margin-top: -20px"><small><a href="https://www.meetup.com/Ghent-Functional-Programming-Group-Meetup/events/266102542/">Functional Kortrijk Meetup</a> | <a href="{{ '/assets/ghent_fp_19.pdf' | relative_url }}">slides</a></small></p>
+  </li>
+  <li>
     <p>2019 | Animation DSL With Effect Handlers</p>
 	  <p style="margin-top: -20px"><small><a href="https://www.meetup.com/dddbelgium/events/262865559">Functional Kortrijk Meetup</a></small></p>
   </li>
@@ -39,12 +43,12 @@ layout: default
 <h2>Teaching Experience</h2>
 <ul>
   <li>
-    2018-2019 | Guiding master thesis students.
+    2018-2020 | Guiding master thesis students.
   </li>
   <li>
-    2018-2019 | Teaching Assistant for <a href=https://onderwijsaanbod.kuleuven.be/syllabi/n/G0P79AN.htm#activetab=doelstellingen_idp26991696>"Fundamenten voor de informatica"</a> <i>(Fundamentals for Computer Science)</i>.
+    2018-2020 | Teaching Assistant for <a href=https://onderwijsaanbod.kuleuven.be/syllabi/n/G0P79AN.htm#activetab=doelstellingen_idp26991696>"Fundamenten voor de informatica"</a> <i>(Fundamentals for Computer Science)</i>.
   </li>
   <li>
-    2017-2019 | Teaching Assistant for <a href=https://onderwijsaanbod.kuleuven.be/syllabi/n/H01B6BN.htm#activetab=doelstellingen_idp2930032>"Methodiek van de informatica"</a> <i>(Methodology of Computer Science)</i>.
+    2017-2020 | Teaching Assistant for <a href=https://onderwijsaanbod.kuleuven.be/syllabi/n/H01B6BN.htm#activetab=doelstellingen_idp2930032>"Methodiek van de informatica"</a> <i>(Methodology of Computer Science)</i>.
   </li>
 </ul>
