--- a/academic.html
+++ b/academic.html
@@ -19,7 +19,7 @@ layout: default
 <ul>
   <li>
     <p>2020 | PaSe: An Extensible and Inspectable DSL for Micro-Animations</p>
-	  <p style="margin-top: -20px"><small><a href="https://www.meetup.com/Ghent-Functional-Programming-Group-Meetup/events/266102542/">Functional Kortrijk Meetup</a> | <a href="{{ '/assets/ghent_fp_19.pdf' | relative_url }}">slides</a></small></p>
+	  <p style="margin-top: -20px"><small><a href="https://www.meetup.com/Ghent-Functional-Programming-Group-Meetup/events/266102542/">Ghent Functional Programming Group Meetup</a> | <a href="{{ '/assets/ghent_fp_19.pdf' | relative_url }}">slides</a></small></p>
   </li>
   <li>
     <p>2019 | Animation DSL With Effect Handlers</p>
