update resume page

--- a/resume.html
+++ b/resume.html
@@ -7,18 +7,18 @@ layout: default
   <li>
     <p>
 	  <button class="collapsible"><b>PhD Student</b></button>
-	  <div class="content"><p>Investigating the expressiveness of techniques for side effects in functional programming. See <a href="/academic">academic</a> tab for more info.</p></div>
+	  <div class="content"><p>Research on various representations of effects in functional programming. See <a href="/academic">academic</a> tab for more info.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>KU Leuven, Belgium</i></p>
 	<p style="margin-top: -20px"><small>February 2017 - Present</small></p>
   </li>
   <li>
     <p>
-	  <button class="collapsible"><b>Software Developer</b></button>
-	  <div class="content"><p>Extending/maintaining software for controlling a variety of lab measurement equipment for testing integrated circuits. Development of utilities for measurement data post-processing.</p></div>
+	  <button class="collapsible"><b>Software Consultant</b></button>
+	  <div class="content"><p>Extending/maintaining software for controlling a variety of lab measurement equipment and utilities for measurement data post-processing. This software is used by a group of researchers at IMEC, an international R&D business in the field of nanoelectronics, to aid in their experimental research on design of electronic circuits.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>Imec, Belgium</i></p>
-	<p style="margin-top: -20px"><small>As Freelance Developer: June 2018 - Present • 10 %</small></p>
+	<p style="margin-top: -20px"><small>As Freelance Consultant: June 2018 - Present • 10 %</small></p>
 	<p style="margin-top: -20px"><small>As (Summer) Intern: 2010-2015 • ~6 months total</small></p>
   </li>
   <li>
@@ -33,6 +33,22 @@ layout: default
 
 <h2>Open Source</h2>
 Some selected open source contributions:
+<ul>
+  <li>
+    <a href=https://github.com/microsoft/TypeScript/issues/33014>TypeScript extension</a>
+    <p style="margin-top: -10px"><i>Extension to TypeScript's type system to allow dependent-type-like functions. Accompanied by <a href=https://github.com/microsoft/TypeScript/pull/33237>a prototype implementation</a>.</i></p>
+  </li>
+  <li>
+    <a href=https://github.com/agda/agda-stdlib/pull/869>Add Map type to agda stdlib</a>
+    <p style="margin-top: -10px"><i>Addition of a Map type in the agda standard library, it provides a simpler interface for maps where the type of values is not dependent on the key.</i></p>
+  </li>
+  <li>
+    <a href=https://github.com/bos/criterion/pull/199>More reliable IO benchmarking functions.</a>
+    <p style="margin-top: -10px"><i>Adds more reliable functions for benchmarking IO operations where the main performance hit is located in the evaluation of the IO computation, rather than the execution of the computation.</i></p>
+  </li>
+</ul>
+
+Some selected open source projects:
 <ul>
   <li>
     <a href=https://github.com/rubenpieters/animation-dsl-examples>Animation DSL Examples (Haskell)</a>
