add code link fun kortr

--- a/academic.html
+++ b/academic.html
@@ -23,7 +23,7 @@ layout: default
   </li>
   <li>
     <p>2019 | Animation DSL With Effect Handlers</p>
-	  <p style="margin-top: -20px"><small><a href="https://www.meetup.com/dddbelgium/events/262865559">Functional Kortrijk Meetup</a></small></p>
+	  <p style="margin-top: -20px"><small><a href="https://www.meetup.com/dddbelgium/events/262865559">Functional Kortrijk Meetup</a> | <a href="https://github.com/rubenpieters/fun-kortr-anim-dsl">code</a></small></p>
   </li>
   <li>
     <p>2019 | (Non-)Monadic Effect Handlers</p>
