--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@ Some selected open source contributions:
   </li>
   <li>
     <a href=https://github.com/bos/criterion/pull/199>More reliable IO benchmarking functions.</a>
-    <p style="margin-top: -10px"><i>Adds more reliable functions for benchmarking IO operations where the main performance hit is located in the evaluation of the IO computation, rather than the execution of the computation.</i></p>
+    <p style="margin-top: -10px"><i>Adds more reliable functions for benchmarking IO operations where the main performance hit is located in the evaluation to obtain the IO computation, rather than the execution of the computation.</i></p>
   </li>
 </ul>
 
