add par-seq post

--- a/resume.html
+++ b/resume.html
@@ -35,15 +35,15 @@ layout: default
 Some selected open source contributions:
 <ul>
   <li>
-    <a href=https://github.com/microsoft/TypeScript/issues/33014>TypeScript extension</a>
+    <a href=https://github.com/microsoft/TypeScript/issues/33014>Dependent-Type-Like Functions for TypeScript (TypeScript)</a>
     <p style="margin-top: -10px"><i>Extension to TypeScript's type system to allow dependent-type-like functions. Accompanied by <a href=https://github.com/microsoft/TypeScript/pull/33237>a prototype implementation</a>.</i></p>
   </li>
   <li>
-    <a href=https://github.com/agda/agda-stdlib/pull/869>Add Map type to agda stdlib</a>
+    <a href=https://github.com/agda/agda-stdlib/pull/869>Add Map Type to Agda Standard Library (Agda)</a>
     <p style="margin-top: -10px"><i>Addition of a Map type in the agda standard library, it provides a simpler interface for maps where the type of values is not dependent on the key.</i></p>
   </li>
   <li>
-    <a href=https://github.com/bos/criterion/pull/199>More reliable IO benchmarking functions.</a>
+    <a href=https://github.com/bos/criterion/pull/199>More Reliable IO Benchmarking Functions for Criterion (Haskell)</a>
     <p style="margin-top: -10px"><i>Adds more reliable functions for benchmarking IO operations where the main performance hit is located in the evaluation to obtain the IO computation, rather than the execution of the computation.</i></p>
   </li>
 </ul>
