add lambda days pres

--- a/academic.html
+++ b/academic.html
@@ -19,6 +19,10 @@ layout: default
 <ul>
   <li>
     <p>2020 | PaSe: An Extensible and Inspectable DSL for Micro-Animations</p>
+	  <p style="margin-top: -20px"><small><a href="https://www.lambdadays.org/lambdadays2020">Lambda Days 2020 (TFP track)</a> | <a href="{{ '/assets/tfp20.pdf' | relative_url }}">slides</a></small></p>
+  </li>
+  <li>
+    <p>2020 | PaSe: An Extensible and Inspectable DSL for Micro-Animations</p>
 	  <p style="margin-top: -20px"><small><a href="https://www.meetup.com/Ghent-Functional-Programming-Group-Meetup/events/266102542/">Ghent Functional Programming Group Meetup</a> | <a href="{{ '/assets/ghent_fp_19.pdf' | relative_url }}">slides</a></small></p>
   </li>
   <li>
