--- a/academic.html
+++ b/academic.html
@@ -4,6 +4,11 @@ layout: default
 <h2>Publications</h2>
 <ul>
   <li>
+    <p>2020 | Generalized Monoidal Effects and Handlers</p>
+    <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Exequiel Rivas, Tom Schrijvers</small></p>
+	  <p style="margin-top: -20px"><small><a href="{{ '/assets/papers/JFP20-handlers' | relative_url }}">pre-print</a></small></p>
+  </li>
+  <li>
     <p>2019 | Faster Coroutine Pipelines: A Reconstruction</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers</small></p>
 	  <p style="margin-top: -20px"><small><a href="https://popl19.sigplan.org/track/PADL-2019">PADL'19</a> | <a href="https://link.springer.com/chapter/10.1007/978-3-030-05998-9_9">springer</a> | <a href="http://www.cs.kuleuven.be/publicaties/rapporten/cw/CW715.pdf">extended version</a></small></p>
