--- a/resume.html
+++ b/resume.html
@@ -51,6 +51,10 @@ Some selected open source contributions:
 Some selected open source projects:
 <ul>
   <li>
+    <a href=https://github.com/rubenpieters/PaSe-hs>PaSe (Haskell)</a>
+    <p style="margin-top: -10px"><i>PaSe is a Haskell animation library based on compositional animation design. The basic building blocks are parallel and sequential composition of animations.</i></p>
+  </li>
+  <li>
     <a href=https://github.com/rubenpieters/animation-dsl-examples>Animation DSL Examples (Haskell)</a>
     <p style="margin-top: -10px"><i>Showcase of a minimalistic DSL used for creating (micro-)animations.</i></p>
   </li>
