--- a/academic.html
+++ b/academic.html
@@ -6,7 +6,7 @@ layout: default
   <li>
     <p>2020 | Generalized Monoidal Effects and Handlers</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Exequiel Rivas, Tom Schrijvers</small></p>
-	  <p style="margin-top: -20px"><small><a href="{{ '/assets/papers/JFP20-handlers' | relative_url }}">pre-print</a></small></p>
+	  <p style="margin-top: -20px"><small>JFP | <a href="{{ '/assets/papers/JFP20-handlers' | relative_url }}">pre-print</a></small></p>
   </li>
   <li>
     <p>2019 | Faster Coroutine Pipelines: A Reconstruction</p>
