add published version text

--- a/academic.html
+++ b/academic.html
@@ -6,12 +6,12 @@ layout: default
   <li>
     <p>2020 | Faster Coroutine Pipelines: A Reconstruction</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers</small></p>
-	  <p style="margin-top: -20px"><small><a href="http://dx.doi.org/10.1017/S0956796820000192">JFP</a> | <a href="{{ '/assets/papers/JFP20-pipes.pdf' | relative_url }}">pre-print</a></small></p>
+	  <p style="margin-top: -20px"><small>published version at <a href="http://dx.doi.org/10.1017/S0956796820000192">JFP</a> | <a href="{{ '/assets/papers/JFP20-pipes.pdf' | relative_url }}">pre-print</a></small></p>
   </li>
   <li>
     <p>2020 | PaSe: An Extensible and Inspectable DSL for Micro-Animations</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers</small></p>
-	  <p style="margin-top: -20px"><small><a href="http://www.cse.chalmers.se/~rjmh/tfp/index.htm">TFP'20</a> | <a href="{{ '/assets/papers/TFP20.pdf' | relative_url }}">pre-print</a></small></p>
+	  <p style="margin-top: -20px"><small>published version at <a href="http://www.cse.chalmers.se/~rjmh/tfp/index.htm">TFP'20</a> | <a href="{{ '/assets/papers/TFP20.pdf' | relative_url }}">pre-print</a></small></p>
   </li>
   <li>
     <p>2020 | Generalized Monoidal Effects and Handlers</p>
@@ -21,12 +21,12 @@ layout: default
   <li>
     <p>2019 | Faster Coroutine Pipelines: A Reconstruction</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers</small></p>
-	  <p style="margin-top: -20px"><small><a href="https://popl19.sigplan.org/track/PADL-2019">PADL'19</a> | <a href="https://link.springer.com/chapter/10.1007/978-3-030-05998-9_9">springer</a> | <a href="http://www.cs.kuleuven.be/publicaties/rapporten/cw/CW715.pdf">extended version</a></small></p>
+	  <p style="margin-top: -20px"><small><a href="https://popl19.sigplan.org/track/PADL-2019">PADL'19</a> | published version at <a href="https://link.springer.com/chapter/10.1007/978-3-030-05998-9_9">springer</a> | <a href="http://www.cs.kuleuven.be/publicaties/rapporten/cw/CW715.pdf">extended version</a></small></p>
   </li>
   <li>
     <p>2017 | Handlers for Non-Monadic Computations</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers, Exequiel Rivas</small></p>
-	  <p style="margin-top: -20px"><small><a href="http://2017.iflconference.org/">IFL'17</a> | <a href="https://dl.acm.org/citation.cfm?doid=3205368.3205372">acm</a> | <a href="http://www.cs.kuleuven.be/publicaties/rapporten/cw/CW713.pdf">extended version</a></small></p>
+	  <p style="margin-top: -20px"><small><a href="http://2017.iflconference.org/">IFL'17</a> | published version at <a href="https://dl.acm.org/citation.cfm?doid=3205368.3205372">acm</a> | <a href="http://www.cs.kuleuven.be/publicaties/rapporten/cw/CW713.pdf">extended version</a></small></p>
   </li>
 </ul>
 
