--- a/academic.html
+++ b/academic.html
@@ -11,12 +11,12 @@ layout: default
   <li>
     <p>2020 | PaSe: An Extensible and Inspectable DSL for Micro-Animations</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers</small></p>
-	  <p style="margin-top: -20px"><small>published version at <a href="http://www.cse.chalmers.se/~rjmh/tfp/index.htm">TFP'20</a> | <a href="{{ '/assets/papers/TFP20.pdf' | relative_url }}">pre-print</a></small></p>
+	  <p style="margin-top: -20px"><small><a href="http://www.cse.chalmers.se/~rjmh/tfp/index.htm">TFP'20</a> | <a href="{{ '/assets/papers/TFP20.pdf' | relative_url }}">pre-print</a></small></p>
   </li>
   <li>
     <p>2020 | Generalized Monoidal Effects and Handlers</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Exequiel Rivas, Tom Schrijvers</small></p>
-	  <p style="margin-top: -20px"><small><a href="http://dx.doi.org/10.1017/S0956796820000106">JFP</a> | <a href="{{ '/assets/papers/JFP20-handlers.pdf' | relative_url }}">pre-print</a></small></p>
+	  <p style="margin-top: -20px"><small>published version at <a href="http://dx.doi.org/10.1017/S0956796820000106">JFP</a> | <a href="{{ '/assets/papers/JFP20-handlers.pdf' | relative_url }}">pre-print</a></small></p>
   </li>
   <li>
     <p>2019 | Faster Coroutine Pipelines: A Reconstruction</p>
