--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@ layout: default
 	  <div class="content"><p>Extending/maintaining software for controlling a variety of lab measurement equipment and utilities for measurement data post-processing. This software is used by a group of researchers at IMEC, an international R&D business in the field of nanoelectronics, to aid in their experimental research on design of electronic circuits.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>Imec, Belgium</i></p>
-	<p style="margin-top: -20px"><small>As Freelance Consultant: June 2018 - Present • 10 %</small></p>
+	<p style="margin-top: -20px"><small>As Freelance Consultant: June 2018 - December 2019 • 10 %</small></p>
 	<p style="margin-top: -20px"><small>As (Summer) Intern: 2010-2015 • ~6 months total</small></p>
   </li>
   <li>
