add published version pase paper

--- a/academic.html
+++ b/academic.html
@@ -11,7 +11,7 @@ layout: default
   <li>
     <p>2020 | PaSe: An Extensible and Inspectable DSL for Micro-Animations</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers</small></p>
-	  <p style="margin-top: -20px"><small><a href="http://www.cse.chalmers.se/~rjmh/tfp/index.htm">TFP'20</a> | <a href="{{ '/assets/papers/TFP20.pdf' | relative_url }}">pre-print</a></small></p>
+	  <p style="margin-top: -20px"><small><a href="http://www.cse.chalmers.se/~rjmh/tfp/index.htm">TFP'20</a> | published version at <a href="https://link.springer.com/chapter/10.1007/978-3-030-57761-2_1">springer</a> | <a href="{{ '/assets/papers/TFP20.pdf' | relative_url }}">pre-print</a></small></p>
   </li>
   <li>
     <p>2020 | Generalized Monoidal Effects and Handlers</p>
