add nisei resume

--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,14 @@ layout: default
   </li>
   <li>
     <p>
+	  <button class="collapsible"><b>Rules Associate</b></button>
+	  <div class="content"><p>NISEI is a fan-run volunteer organization developing a continuation for the Android: Netrunner boardgame. I am part of the rules team, which is responsible for a variety of activities related to the ruleset of the game. Examples of such activities are maintaining the comprehensive rules and ensuring newly released cards function as desired within these rules.</p></div>
+	</p>
+	<p style="margin-top: -20px"><i>NISEI, Remote</i></p>
+	<p style="margin-top: -20px"><small>September 2020 - Present • Volunteer</small></p>
+  </li>
+  <li>
+    <p>
 	  <button class="collapsible"><b>Software Consultant</b></button>
 	  <div class="content"><p>Extending/maintaining software for controlling a variety of lab measurement equipment and utilities for measurement data post-processing. This software is used by a group of researchers at IMEC, an international R&D business in the field of nanoelectronics, to aid in their experimental research on design of electronic circuits.</p></div>
 	</p>
