--- a/resume.html
+++ b/resume.html
@@ -6,11 +6,11 @@ layout: default
 <ul>
   <li>
     <p>
-	  <button class="collapsible"><b>PhD Student</b></button>
-	  <div class="content"><p>Research on various representations of effects in functional programming. See <a href="/academic">academic</a> tab for more info.</p></div>
+	  <button class="collapsible"><b>Doctoral Researcher</b></button>
+	  <div class="content"><p>Dissertation title: "Structuring Domain-Specific Languages with Effects". See <a href="/academic">academic</a> tab for more info.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>KU Leuven, Belgium</i></p>
-	<p style="margin-top: -20px"><small>February 2017 - Present</small></p>
+	<p style="margin-top: -20px"><small>February 2017 - February 2021 (expected) • Full-Time</small></p>
   </li>
   <li>
     <p>
@@ -35,7 +35,7 @@ layout: default
 	  <div class="content"><p>Development of a telemetry platform for enhancing the user experience of digital TV customers at Proximus, the largest Belgian telecommunication company. This platform was developed using big data technologies including Scala, Spark and Hadoop.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>Devoteam, Belgium</i></p>
-	<p style="margin-top: -20px"><small>September 2015 - February 2017</small></p>
+	<p style="margin-top: -20px"><small>September 2015 - February 2017 • Full-Time</small></p>
   </li>
 </ul>
 
