--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@ layout: default
   <li>
     <p>
 	  <button class="collapsible"><b>Software Consultant</b></button>
-	  <div class="content"><p>Development of a telemetry platform for enhancing the user experience of digital TV customers at Proximus, the largest Belgian telecommunication company. This platform was developed using big data technologies including Scala, Spark and Hadoop.</p></div>
+	  <div class="content"><p>Development of a telemetry platform for analyzing the user experience of digital TV customers at Proximus, the largest Belgian telecommunication company. This platform was developed using big data technologies including Scala, Spark and Hadoop.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>Devoteam, Belgium</i></p>
 	<p style="margin-top: -20px"><small>September 2015 - February 2017 • Full-Time</small></p>
