nisei -> project nisei, copyright date

--- a/resume.html
+++ b/resume.html
@@ -15,9 +15,9 @@ layout: default
   <li>
     <p>
 	  <button class="collapsible"><b>Rules Associate</b></button>
-	  <div class="content"><p>NISEI is a fan-run volunteer organization developing a continuation of Netrunner. I am part of the rules team, which is responsible for a variety of activities related to the ruleset of the game. Examples of such activities are maintaining the comprehensive rules and ensuring newly released cards function as desired within these rules.</p></div>
+	  <div class="content"><p>Project NISEI is a fan-run volunteer organization developing a continuation of Netrunner. I am part of the rules team, which is responsible for a variety of activities related to the ruleset of the game. Examples of such activities are maintaining the comprehensive rules and ensuring newly released cards function as desired within these rules.</p></div>
 	</p>
-	<p style="margin-top: -20px"><i>NISEI, Remote</i></p>
+	<p style="margin-top: -20px"><i>Project NISEI, Remote</i></p>
 	<p style="margin-top: -20px"><small>September 2020 - Present • Volunteer</small></p>
   </li>
   <li>
