--- a/academic.html
+++ b/academic.html
@@ -4,6 +4,11 @@ layout: default
 <h2>Publications</h2>
 <ul>
   <li>
+    <p>2020 | Structuring Domain-Specific Languages with Effects</p>
+    <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u></small></p>
+	  <p style="margin-top: -20px"><small>PhD Thesis</small></p>
+  </li>
+  <li>
     <p>2020 | Faster Coroutine Pipelines: A Reconstruction</p>
     <p style="margin-top: -20px"><small><u>Ruben P. Pieters</u>, Tom Schrijvers</small></p>
 	  <p style="margin-top: -20px"><small>published version at <a href="http://dx.doi.org/10.1017/S0956796820000192">JFP</a> | <a href="{{ '/assets/papers/JFP20-pipes.pdf' | relative_url }}">pre-print</a></small></p>
