--- a/resume.html
+++ b/resume.html
@@ -6,19 +6,17 @@ layout: default
 <ul>
   <li>
     <p>
+	  <button class="collapsible"><b>Software Engineer</b></button>
+	<p style="margin-top: -20px"><i>Guardsquare, Belgium</i></p>
+	<p style="margin-top: -20px"><small>March 2021 - Present • Full-Time</small></p>
+  </li>
+  <li>
+    <p>
 	  <button class="collapsible"><b>Doctoral Researcher</b></button>
 	  <div class="content"><p>Dissertation title: "Structuring Domain-Specific Languages with Effects". See <a href="/academic">academic</a> tab for more info.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>KU Leuven, Belgium</i></p>
-	<p style="margin-top: -20px"><small>February 2017 - February 2021 (expected) • Full-Time</small></p>
-  </li>
-  <li>
-    <p>
-	  <button class="collapsible"><b>Rules Associate</b></button>
-	  <div class="content"><p>Project NISEI is a fan-run volunteer organization developing a continuation of Netrunner. I am part of the rules team, which is responsible for a variety of activities related to the ruleset of the game. Examples of such activities are maintaining the comprehensive rules and ensuring newly released cards function as desired within these rules.</p></div>
-	</p>
-	<p style="margin-top: -20px"><i>Project NISEI, Remote</i></p>
-	<p style="margin-top: -20px"><small>September 2020 - Present • Volunteer</small></p>
+	<p style="margin-top: -20px"><small>February 2017 - February 2021 • Full-Time</small></p>
   </li>
   <li>
     <p>
@@ -36,6 +34,18 @@ layout: default
 	</p>
 	<p style="margin-top: -20px"><i>Devoteam, Belgium</i></p>
 	<p style="margin-top: -20px"><small>September 2015 - February 2017 • Full-Time</small></p>
+  </li>
+</ul>
+
+<h2>Volunteer Work</h2>
+<ul>
+  <li>
+    <p>
+	  <button class="collapsible"><b>Rules Associate</b></button>
+	  <div class="content"><p>Project NISEI is a fan-run volunteer organization developing a continuation of Netrunner. I am part of the rules team, which is responsible for a variety of activities related to the ruleset of the game. Examples of such activities are maintaining the comprehensive rules and ensuring newly released cards function as desired within these rules.</p></div>
+	</p>
+	<p style="margin-top: -20px"><i><a href=https://nisei.net>Project NISEI</a>, Remote</i></p>
+	<p style="margin-top: -20px"><small>September 2020 - Present • Volunteer</small></p>
   </li>
 </ul>
 
@@ -96,7 +106,7 @@ Some selected open source projects:
   <li>
     <p><b>Computer Science Degree</b></p>
 	<p style="margin-top: -20px"><i>KU Leuven, Belgium</i></p>
-	<p style="margin-top: -20px"><small>2017 - Present • PhD Computer Science</small></p>
+	<p style="margin-top: -20px"><small>2017 - 2021 • PhD Computer Science</small></p>
 	<p style="margin-top: -20px"><small>2013 - 2015 • Master Computer Science</small></p>
 	<p style="margin-top: -20px"><small>2010 - 2013 • Bachelor Engineering Science</small></p>
   </li>
