small changes in resume

--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@ layout: default
 <ul>
   <li>
     <p>
-	  <button class="collapsible"><b>Software Engineer</b></button>
+	  <button class="collapsible"><b>Compiler Engineer</b></button>
 	<p style="margin-top: -20px"><i>Guardsquare, Belgium</i></p>
 	<p style="margin-top: -20px"><small>March 2021 - Present • Full-Time</small></p>
   </li>
@@ -21,19 +21,19 @@ layout: default
   <li>
     <p>
 	  <button class="collapsible"><b>Software Consultant</b></button>
+	  <div class="content"><p>Development of a telemetry platform for analyzing the user experience of digital TV customers at Proximus, the largest Belgian telecommunication company. This platform was developed using big data technologies including Scala, Spark and Hadoop.</p></div>
+	</p>
+	<p style="margin-top: -20px"><i>Devoteam, Belgium</i></p>
+	<p style="margin-top: -20px"><small>September 2015 - February 2017 • Full-Time</small></p>
+  </li>
+  <li>
+    <p>
+	  <button class="collapsible"><b>Software Consultant</b></button>
 	  <div class="content"><p>Extending/maintaining software for controlling a variety of lab measurement equipment and utilities for measurement data post-processing. This software is used by a group of researchers at IMEC, an international R&D business in the field of nanoelectronics, to aid in their experimental research on design of electronic circuits.</p></div>
 	</p>
 	<p style="margin-top: -20px"><i>Imec, Belgium</i></p>
 	<p style="margin-top: -20px"><small>As Freelance Consultant: June 2018 - December 2019 • 10 %</small></p>
 	<p style="margin-top: -20px"><small>As (Summer) Intern: 2010-2015 • ~6 months total</small></p>
-  </li>
-  <li>
-    <p>
-	  <button class="collapsible"><b>Software Consultant</b></button>
-	  <div class="content"><p>Development of a telemetry platform for analyzing the user experience of digital TV customers at Proximus, the largest Belgian telecommunication company. This platform was developed using big data technologies including Scala, Spark and Hadoop.</p></div>
-	</p>
-	<p style="margin-top: -20px"><i>Devoteam, Belgium</i></p>
-	<p style="margin-top: -20px"><small>September 2015 - February 2017 • Full-Time</small></p>
   </li>
 </ul>
 
