--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,8 @@ layout: default
   <li>
     <p>
 	  <button class="collapsible"><b>Compiler Engineer</b></button>
+	  <div class="content"><p>Part of the team developing DexGuard, a dex recompiler aimed at adding security for reverse engineering in Android applications.</p></div>
+	</p>
 	<p style="margin-top: -20px"><i>Guardsquare, Belgium</i></p>
 	<p style="margin-top: -20px"><small>March 2021 - Present • Full-Time</small></p>
   </li>
@@ -42,9 +44,9 @@ layout: default
   <li>
     <p>
 	  <button class="collapsible"><b>Rules Associate</b></button>
-	  <div class="content"><p>Project NISEI is a fan-run volunteer organization developing a continuation of Netrunner. I am part of the rules team, which is responsible for a variety of activities related to the ruleset of the game. Examples of such activities are maintaining the comprehensive rules and ensuring newly released cards function as desired within these rules.</p></div>
+	  <div class="content"><p>Null Signal Games is a nonprofit games publisher developing a continuation of the expandable card game Netrunner. Null Signal Games staff are all unpaid volunteers. I am part of the rules team, which is responsible for a variety of activities related to the ruleset of the game. Examples of such activities are maintaining the comprehensive rules, ensuring newly released cards function as desired within these rules and ensure consistency in card templating.</p></div>
 	</p>
-	<p style="margin-top: -20px"><i><a href=https://nisei.net>Project NISEI</a>, Remote</i></p>
+	<p style="margin-top: -20px"><i><a href=https://nullsignal.games>Null Signal Games</a>, Remote</i></p>
 	<p style="margin-top: -20px"><small>September 2020 - Present • Volunteer</small></p>
   </li>
 </ul>
