add droidcon berlin presentation

--- a/academic.html
+++ b/academic.html
@@ -38,6 +38,10 @@ layout: default
 <h2>Presentations</h2>
 <ul>
   <li>
+    <p>2023 | Impact of framework choice on your application: A reverse engineering perspective</p>
+	  <p style="margin-top: -20px"><small><a href="https://www.droidcon.com/events/droidcon-berlin-2023/">DroidCon Berlin 2023</a></small></p>
+  </li>
+  <li>
     <p>2020 | PaSe: An Extensible and Inspectable DSL for Micro-Animations</p>
 	  <p style="margin-top: -20px"><small><a href="https://www.lambdadays.org/lambdadays2020">Lambda Days 2020 (TFP track)</a> | <a href="{{ '/assets/tfp20.pdf' | relative_url }}">slides</a></small></p>
   </li>
