add droidcon 2025 presentations

--- a/academic.html
+++ b/academic.html
@@ -38,6 +38,14 @@ layout: default
 <h2>Presentations</h2>
 <ul>
   <li>
+    <p>2025 | Booesting your debugging skills by understanding the Kotlin to Dalvik bytecode translation</p>
+	  <p style="margin-top: -20px"><small><a href="https://www.droidcon.com/events/droidcon-berlin-2025/">DroidCon Berlin 2025 / DroidCon London 2025</a> | <a href="https://www.youtube.com/watch?v=XFogDQ2vwiE">video</a></small></p>
+  </li>
+  <li>
+    <p>2025 | App Security from Necessary Evil to Performance Advantage</p>
+	  <p style="margin-top: -20px"><small><a href="https://www.droidcon.com/events/droidcon-berlin-2025/">DroidCon Berlin 2025</a> | <a href="https://www.youtube.com/watch?v=7NhSg0I1ca0">video</a></small></p>
+  </li>
+  <li>
     <p>2023 | Impact of framework choice on your application: A reverse engineering perspective</p>
 	  <p style="margin-top: -20px"><small><a href="https://www.droidcon.com/events/droidcon-berlin-2023/">DroidCon Berlin 2023</a></small></p>
   </li>
