add nr rules project

--- a/academic.html
+++ b/academic.html
@@ -38,7 +38,7 @@ layout: default
 <h2>Presentations</h2>
 <ul>
   <li>
-    <p>2025 | Booesting your debugging skills by understanding the Kotlin to Dalvik bytecode translation</p>
+    <p>2025 | Boosting your debugging skills by understanding the Kotlin to Dalvik bytecode translation</p>
 	  <p style="margin-top: -20px"><small><a href="https://www.droidcon.com/events/droidcon-berlin-2025/">DroidCon Berlin 2025 / DroidCon London 2025</a> | <a href="https://www.youtube.com/watch?v=XFogDQ2vwiE">video</a></small></p>
   </li>
   <li>
