--- a/resume.html
+++ b/resume.html
@@ -71,6 +71,10 @@ Some selected open source contributions:
 Some selected open source projects:
 <ul>
   <li>
+    <a href=https://github.com/rubenpieters/netrunner-comprehensive-rules>Netrunner Comprehensive Rules</a>
+    <p style="margin-top: -10px"><i>Automated generation of comprehensive rules documents for Netrunner. Hosted <a href=https://rules.nullsignal.games>online</a> and available <a href=https://nullsignal.games/rules/comp-rules>as pdf</a>.</i></p>
+  </li>
+  <li>
     <a href=https://github.com/rubenpieters/PaSe-hs>PaSe (Haskell)</a>
     <p style="margin-top: -10px"><i>PaSe is a Haskell animation library based on compositional animation design. The basic building blocks are parallel and sequential composition of animations.</i></p>
   </li>
