--- a/academic.html
+++ b/academic.html
@@ -38,6 +38,10 @@ layout: default
 <h2>Presentations</h2>
 <ul>
   <li>
+    <p>2026 | Keeping Games Alive: The Role of Open Source in the Netrunner Revival</p>
+	  <p style="margin-top: -20px"><small><a href="https://fosdem.org/2026/schedule/event/H9WF8Y-keeping-games-alive/">FOSDEM 2026</a> | <a href="{{ '/assets/fosdem2026.pdf' | relative_url }}">slides</a></small></p>
+  </li>
+  <li>
     <p>2025 | Boosting your debugging skills by understanding the Kotlin to Dalvik bytecode translation</p>
 	  <p style="margin-top: -20px"><small><a href="https://www.droidcon.com/events/droidcon-berlin-2025/">DroidCon Berlin 2025 / DroidCon London 2025</a> | <a href="https://www.youtube.com/watch?v=XFogDQ2vwiE">video</a></small></p>
   </li>
